# corin

./: .gitignore  .gitmodules  .readthedocs.yaml  BranchDetails.md  Change Log.md  Demo README.md  Getting the demo to run.txt  LICENSE  Old README copy.md  README.md  TEMP_MODIFICATIONS.md  environment.yml  pyproject.toml  test.py
corin/: CMakeLists.txt  README.md  package.xml
corin_control/: CMakeLists.txt  FindRBDL.cmake  README.md  package.xml  setup.py
corin_control/cfg/: dynreconfig.cfg
corin_control/config/: leg_position_controller.yaml
corin_control/cpp_script/: body_controller.h  constant.h  force_distribution.cpp  force_distribution.h  main_node.cpp  polynomial_spline.cpp  polynomial_spline.h  rcg_test.cpp  test_node.cpp  test_viz.cpp
corin_control/launch/: effort_control.launch  position_control.launch  rviz.launch
corin_control/py_script/: 2019_EKF_default_results.ods  2019_EKF_results.ods  Corin_State_Estimator_PSO_optimisation.py  Corin_State_Estimator_PSOs_optimisation.py  Corin_State_Estimator_PSOs_optimisation_array_max.py  Corin_State_Estimator_PSOs_optimisation_final_sideways_5.py  Corin_State_Estimator_PSOs_optimisation_final_sideways_6.py  Corin_State_Estimator_PSOs_optimisation_final_sideways_7.py  Corin_State_Estimator_PSOs_optimisation_forward_2.py  Corin_State_Estimator_PSOs_optimisation_forward_3.py  Corin_State_Estimator_PSOs_optimisation_forward_4_rms.py  Corin_State_Estimator_PSOs_optimisation_rotate.py  Corin_State_Estimator_PSOs_optimisation_sideways.py  Corin_State_Estimator_PSOs_optimisation_sideways_2.py  Corin_State_Estimator_PSOs_optimisation_sideways_3.py  Corin_State_Estimator_PSOs_optimisation_sideways_4_rms.py  Corin_State_Estimator_PSOs_optimisation_total.py  Corin_State_Estimator_PSOs_optimisation_total_2.py  Corin_State_Estimator_PSOs_optimisation_total_3.py  Corin_State_Estimator_PSOs_optimisation_total_4_max.py  Corin_State_Estimator_PSOs_optimisation_wall.py  Corin_State_Estimator_offline_optimisation.py  Corin_State_Estimator_offline_rotation_optimisation.py  Corin_State_Estimator_offline_test (copy).py  Corin_State_Estimator_offline_test backup_2018-08-16.py  Corin_State_Estimator_offline_test.py  Corin_State_Estimator_offline_test_P0.py  Corin_State_Estimator_offline_test_new.py  Corin_State_Estimator_optimisation.py  Corin_State_Estimator_optimisation_3.py  Corin_State_Estimator_optimisation_4.py  Corin_State_Estimator_optimisation_5 .py  Corin_State_Estimator_sensitivity.py  Corin_State_Estimator_sensitivity_2.py  Corin_State_Estimator_sensitivity_3.py  Corin_State_Estimator_sensitivity_4.py  Corin_State_Estimator_sensitivity_5.py  Corin_State_Estimator_sensitivity_6.py  Corin_State_Estimator_sensitivity_7.py  Corin_State_Estimator_sensitivity_8.py  (+55 more)
corin_control/rviz/: grid_map.rviz
corin_control/src/: .~lock.chimney_s062.csv#  .~lock.chimney_s066.csv#  .~lock.wall_convex_02.csv#  .~lock.wall_convex_new.csv#  .~lock.wall_medRes.csv#  .~lock.wall_medRes_convex.csv#  Corin_State_Estimator_offline_test_P0.py  State_Estimator_test.py  chimney_01.csv  chimney_01_2.csv  chimney_01_3.csv  chimney_01_old.csv  chimney_02.csv  chimney_03.csv  chimney_04.csv  chimney_05.csv  chimney_06.csv  chimney_07.csv  chimney_08.csv  chimney_09.csv  chimney_10.csv  chimney_11.csv  chimney_12.csv  chimney_13.csv  chimney_14.csv  chimney_15.csv  chimney_autom.csv  chimney_cheight_0d1.csv  chimney_highRes.csv  chimney_highRes_opt_2.csv  chimney_highRes_opt_narrow.csv  chimney_highRes_unopt.csv  chimney_lowRes.csv  chimney_medRes.csv  chimney_s054_01.csv  chimney_s054_02.csv  chimney_s054_03.csv  chimney_s062.csv  chimney_s066.csv  chimney_sc_01.csv  (+24 more)
corin_control/srv/: GridMap.srv  PlanPath.srv  RigidBody.srv  UiState.srv
corin_gazebo/: CMakeLists.txt  README.md  package.xml
corin_gazebo/launch/: corin_world.launch  friction.launch  guide_rail.launch  test.launch
corin_gazebo/scripts/: foot_contact.py  foot_contact_mod.py  joint_default  robot_default  robot_default (copy)  simple_test
corin_gazebo/src/: guide_rail_contact_force.py
corin_gazebo/worlds/: block.world  chimney.world  chimney_064.world  chimney_heu (copy).world  chimney_heu.world  chimney_nom.world  chimney_nom_ext.world  chimney_nom_ori.world  chimney_old.world  empty.world  friction.world  uncharacterised_empty.world  wall.world  wall_concave.world  wall_convex.world  wall_new.world
corin_joint_manager/: CMakeLists.txt  README.md  package.xml
corin_joint_manager/config/: corin.robot  dxl_init.yaml  mcorin.robot  offset.yaml
corin_joint_manager/launch/: corin_joint_manager.launch  guide_rail_manager.launch  joint_manager.launch
corin_joint_manager/src/: corin_write.py
corin_manager/: CMakeLists.txt  README.md  package.xml
corin_manager/config/: dxl_init.yaml  mcorin.robot
corin_manager/launch/: corin_manager.launch
corin_manager/src/: corin_manager.cpp  corin_write.py  torque_server.py
corin_msgs/: CMakeLists.txt  package.xml
corin_msgs/msg/: LoggingState.msg  MotionPlan.msg
corin_msgs/srv/: GetGridMap.srv  RigidBody.srv
corin_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
corin_rviz_plugin/src/: teleop_panel.cpp  teleop_panel.h
cpp/: CMakeLists.txt  python_wrapper.cpp
grid_planner_core/: CMakeLists.txt  package.xml  setup.py
grid_planner_core/launch/: grid_planner.launch  rviz.launch
grid_planner_core/src/: motion_import.py  ros_grid_planner.py
grid_planner_core/srv/: GetGridMap.srv
grid_planner_msgs/: CMakeLists.txt  package.xml
grid_planner_msgs/msg/: GridMap.msg  GridMapInfo.msg
grid_planner_msgs/srv/: GetGridMap.srv  PlanPath.srv
mcorin_control/: CMakeLists.txt  package.xml
mcorin_control/cfg/: dynreconfig.cfg
mcorin_control/config/: fixed_position_controller.yaml  leg_position_controller.yaml
mcorin_control/cpp_script/: body_controller.cpp  rcg_test.cpp  stability_margin.cpp  stability_margin.h  stability_margin_node.cpp
mcorin_control/launch/: effort_control.launch  fixed_position_control.launch  position_control.launch
mcorin_control/py_script/: .gitignore  controller_walking.py  (+5 more)
(+383 files in other folders)
