<?xml version="1.0"?>
<package format="2">
  <name>corin</name>
  <version>1.0.0</version>
  <description>Metapackage for all corin development files</description>
  <maintainer email="cheahwilson91@gmail.com">Wilson Cheah</maintainer>

  <license>private</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>corin_rviz_plugin</exec_depend>
  <exec_depend>corin_control</exec_depend>
  <exec_depend>corin_description</exec_depend>
  <exec_depend>corin_gazebo</exec_depend>
  <exec_depend>corin_manager</exec_depend>
  <exec_depend>grid_planner_msgs</exec_depend>
  <exec_depend>grid_planner_core</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>