<?xml version="1.0"?>
<package>
  <name>corin_manager</name>
  <version>0.0.0</version>
  <description>The corin_manager package</description>

  <maintainer email="wilson@todo.todo">wilson</maintainer>
  <license>BSD</license>
  <author email="wilson@todo.todo">wilson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_framework_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robotis_controller</run_depend>
  
</package>
