<package>
  <name>corin_rviz_plugin</name>
  <version>0.1.0</version>
  <description>
     RViZ control interface for Corin.
  </description>
  <maintainer email="cheahwilson91@gmail.com">Wilson Cheah</maintainer>
  <license>BSD</license>
  <author>Wilson Cheah</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
