<?xml version="1.0"?>
<package format="2">
  <name>corin_rviz_plugin</name>
  <version>0.1.0</version>
  <description>
     RViZ control interface for Corin.
  </description>
  <maintainer email="cheahwilson91@gmail.com">Wilson Cheah</maintainer>
  <license>BSD</license>
  <author>Wilson Cheah</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>rviz</depend>
  <depend>corin_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
